test/mutation_analysis/s0405_convert_a_number_to_hexadecimal/hafis/starchat/mutants/5/result.txt
./test/mutation_analysis/s0405_convert_a_number_to_hexadecimal/hafis/starchat/mutants/5/Solution.java:29: error: unreachable statement
        return sb.reverse().toString();
        ^
1 error
